shift crud v2, fix profile show credits

--- a/client/styles.css
+++ b/client/styles.css
@@ -392,19 +392,6 @@ input {
 	padding: .2em;
 	/*padding-left: 1em;*/
 }
-.smallscroll{
-    max-height: 400px !important;
-    /* padding: 5px !important;
-    border-radius: 10px !important;
-    border-width: 1px !important;
-    border-color: grey !important;
-    border-style: solid !important; */
-	overflow-y:scroll;
-	overflow-x:hidden;
-	/* padding-top: .2em; */
-	padding: .2em;
-	/*padding-left: 1em;*/
-}
 .forty {
     max-height:38vh !important;
     min-height:38vh !important;
